Break word to fix font-scaling on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@ body {
   font-family: Roboto, sans-serif;
   line-height: 1.4;
   color: #333;
+  overflow-wrap: break-word;
 }
 
 .dark-mode {
